--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,14 @@
 apply plugin: 'com.android.application'
+apply plugin: 'checkstyle'
+
+preBuild.dependsOn('checkstyle')
+assemble.dependsOn('lint')
+check.dependsOn('checkstyle')
+
+configurations {
+    checksytleOverride
+}
+
 
 android {
     compileSdkVersion 25
@@ -31,4 +41,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
     testCompile 'junit:junit:4.12'
+    checksytleOverride 'com.puppycrawl.tools:checkstyle:7.5'
+}
+tasks.withType(Checkstyle) {
+    checkstyleClasspath = project.configurations.checksytleOverride
 }
